Add react-snap routes and SPA fallback

--- a/package.json
+++ b/package.json
@@ -45,7 +45,17 @@
     "reactSnap":  {
                       "source":  "dist",
                       "include":  [
-                                      "/"
+                                      "/",
+                                      "/about",
+                                      "/blog",
+                                      "/contact",
+                                      "/courses",
+                                      "/disclaimer",
+                                      "/exams",
+                                      "/mock-tests",
+                                      "/privacy-policy",
+                                      "/pyq",
+                                      "/subject-tests"
                                   ],
                       "crawl":  true,
                       "inlineCss":  true,
