--- a/package.json
+++ b/package.json
@@ -1,68 +1,44 @@
 {
-    "name":  "vite-react-typescript-starter",
-    "private":  true,
-    "version":  "0.0.0",
-    "type":  "module",
-    "scripts":  {
-                    "dev":  "vite",
-                    "build":  "vite build",
-                    "lint":  "eslint .",
-                    "lint:dualite":  "eslint --config eslint.dualite.config.js .",
-                    "tsc:dualite":  "yarn tsc -p tsconfig.dualite.json",
-                    "preview":  "vite preview",
-                    "postbuild":  "node ./scripts/react-snap.cjs"
-                },
-    "dependencies":  {
-                         "axios":  "^1.9.0",
-                         "clsx":  "^2.1.1",
-                         "lucide-react":  "^0.511.0",
-                         "react":  "^19.1.0",
-                         "react-dom":  "^19.1.0",
-                         "react-helmet-async":  "^2.0.5",
-                         "react-router-dom":  "^7.12.0",
-                         "tailwind-merge":  "^3.4.0"
-                     },
-    "devDependencies":  {
-                            "@eslint/js":  "^9.27.0",
-                            "@tailwindcss/typography":  "^0.5.19",
-                            "@types/react":  "^19.1.5",
-                            "@types/react-dom":  "^19.1.5",
-                            "@vitejs/plugin-react":  "^4.5.0",
-                            "autoprefixer":  "^10.4.21",
-                            "eslint":  "^9.27.0",
-                            "eslint-plugin-import":  "^2.32.0",
-                            "eslint-plugin-react":  "^7.37.5",
-                            "eslint-plugin-react-hooks":  "^5.2.0",
-                            "eslint-plugin-react-refresh":  "^0.4.20",
-                            "globals":  "^16.2.0",
-                            "postcss":  "^8.4.35",
-                            "tailwindcss":  "^3.4.1",
-                            "typescript":  "^5.8.3",
-                            "typescript-eslint":  "^8.32.1",
-                            "vite":  "^6.3.5",
-                            "react-snap":  "^1.23.0",
-                            "puppeteer":  "^24.37.0"
-                        },
-    "reactSnap":  {
-                      "source":  "dist",
-                      "include":  [
-                                      "/",
-                                      "/about",
-                                      "/blog",
-                                      "/contact",
-                                      "/courses",
-                                      "/disclaimer",
-                                      "/exams",
-                                      "/mock-tests",
-                                      "/privacy-policy",
-                                      "/pyq",
-                                      "/subject-tests"
-                                  ],
-                      "crawl":  true,
-                      "inlineCss":  true,
-                      "puppeteerArgs":  [
-                                            "--no-sandbox",
-                                            "--disable-setuid-sandbox"
-                                        ]
-                  }
+  "name": "vite-react-typescript-starter",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "lint": "next lint",
+    "lint:dualite": "eslint --config eslint.dualite.config.js .",
+    "tsc:dualite": "yarn tsc -p tsconfig.dualite.json",
+    "start": "next start"
+  },
+  "dependencies": {
+    "axios": "^1.9.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.511.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.12.0",
+    "tailwind-merge": "^3.4.0",
+    "next": "^16.1.6"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.27.0",
+    "@tailwindcss/typography": "^0.5.19",
+    "@types/react": "^19.1.5",
+    "@types/react-dom": "^19.1.5",
+    "@vitejs/plugin-react": "^4.5.0",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.27.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.2.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.1",
+    "vite": "^6.3.5",
+    "@types/node": "^25.2.3"
+  }
 }
